Fix A mobile footer alignment

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: #242424;
-  padding: 2.5rem 0 2rem 0;
+  padding: 2.5rem 0 2.5rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -59,10 +59,10 @@
 .footer-link-items {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: stretch;
   margin: 16px;
-  text-align: left;
-  width: 160px;
+  text-align: center;
+  width: 150px;
   box-sizing: border-box;
 }
 
@@ -140,6 +140,7 @@
 
 @media screen and (max-width: 820px) {
   .footer-links {
+    padding-left: 1rem;
     padding-top: 2rem;
   }
 
@@ -161,4 +162,5 @@
 }
 
 @media screen and (max-width: 768px) {
+
 }
